# ptpd

./: .gitignore  CMakeLists.txt  CMakePresets.json  config.h
.github/workflows/: build.yml  build_bsd.yml
docker/: Dockerfile  docker-compose.yml
src/: CMakeLists.txt
